--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
 	"editor.formatOnPaste": true,
 	"editor.formatOnSave": true,
 	"editor.renderWhitespace": "all",
-	"editor.rulers": [80]
+	"editor.rulers": [80],
+	"ansible.python.interpreterPath": "/bin/python3"
 }
