Add Traefik static configuration file for TLS enhancement

--- a/traefik/.env
+++ b/traefik/.env
@@ -16,6 +16,6 @@ TRAEFIK_VERSION=v3.3.6
 # The email address for Let's Encrypt
 TRAEFIK_ACME_EMAIL=admin@m3w.ch
 
-# The provider of the DNS challenge, please visit the docs:
-# https://doc.traefik.io/traefik/https/acme/#providers
+# The provider of the DNS challenge
+# Please check the `traefik-dns-challenge.env` file for additional configuration
 TRAEFIK_ACME_DNS_PROVIDER=CHANGE_ME
