--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -15,8 +15,11 @@ services:
       ## Dashboard
       - --api.dashboard=true
       ## Providers
+      # Docker
       - --providers.docker=true
       - --providers.docker.exposedByDefault=false
+      # File
+      - --providers.file.filename=/etc/traefik/traefik_dynamic.yaml
       ## Entrypoints
       - --entrypoints.web.address=:80
       - --entrypoints.websecure.address=:443
@@ -46,7 +49,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./config/letsencrypt:/letsencrypt
-      - ./traefik.yaml:/etc/traefik/traefik.yaml
+      - ./traefik_dynamic.yaml:/etc/traefik/traefik_dynamic.yaml
     labels:
       # Traefik
       - traefik.enable=true
