--- a/traefik/traefik_dynamic.yaml
+++ b/traefik/traefik_dynamic.yaml
@@ -1,8 +1,23 @@
+http:
+  middlewares:
+    http-strict-transport-security-header:
+      headers:
+        customResponseHeaders:
+          Strict-Transport-Security: max-age=63072000
+
 tls:
   options:
     default:
-      minVersion: VersionTLS13
+      minVersion: VersionTLS12
       curvePreferences:
         - X25519
         - CurveP256
         - CurveP384
+      cipherSuites:
+        - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
+        - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
+        - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+        - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+        - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
+        - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305
+      sniStrict: false
