--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -8,38 +8,7 @@ services:
   traefik:
     container_name: traefik
     image: traefik:${TRAEFIK_VERSION}
-    command:
-      ## Global
-      - --log.level=INFO
-      - --global.sendAnonymousUsage=true
-      ## Dashboard
-      - --api.dashboard=true
-      ## Providers
-      # Docker
-      - --providers.docker=true
-      - --providers.docker.exposedByDefault=false
-      # File
-      - --providers.file.filename=/etc/traefik/traefik_dynamic.yaml
-      ## Entrypoints
-      - --entrypoints.web.address=:80
-      - --entrypoints.websecure.address=:443
-      # Generate Let's Encrypt certificates for the root domain and wildcard subdomains
-      - --entrypoints.websecure.http.tls.domains[0].main=${ROOT_FQDN}
-      - --entrypoints.websecure.http.tls.domains[0].sans=*.${ROOT_FQDN}
-      # Redirect all HTTP traffic to HTTPS
-      - --entrypoints.web.http.redirections.entrypoint.to=websecure
-      - --entrypoints.web.http.redirections.entrypoint.scheme=https
-      - --entrypoints.web.http.redirections.entrypoint.permanent=true
-      # Enable TLS for all HTTPS traffic
-      - --entrypoints.websecure.http.tls=true
-      - --entrypoints.websecure.http.tls.certresolver=letsencrypt
-      # Enable middlewares for all HTTPS traffic
-      - --entryPoints.websecure.http.middlewares=http-strict-transport-security-header@file
-      ## Certificates
-      - --certificatesresolvers.letsencrypt.acme.email=${TRAEFIK_ACME_EMAIL}
-      - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json
-      - --certificatesresolvers.letsencrypt.acme.dnschallenge=true
-      - --certificatesresolvers.letsencrypt.acme.dnschallenge.provider=${TRAEFIK_ACME_DNS_PROVIDER}
+    command: --configFile=/etc/traefik/traefik_static.yaml
     restart: unless-stopped
     env_file:
       - ./traefik-dns-challenge.env
@@ -50,7 +19,8 @@ services:
       - 443:443
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./config/letsencrypt:/letsencrypt
+      - ./letsencrypt:/etc/trafik/letsencrypt
+      - ./traefik_static.yaml:/etc/traefik/traefik_dynamic.yaml
       - ./traefik_dynamic.yaml:/etc/traefik/traefik_dynamic.yaml
     labels:
       # Traefik
