--- a/traefik/.env
+++ b/traefik/.env
@@ -1,3 +1,8 @@
+## Fully qualified domain names (FQDNs)
+
+# The FQDN to access Traefik
+TRAEFIK_FQDN=traefik.m3w.ch
+
 ## Versions to use
 
 # The version to use for Traefik
