--- a/traefik/traefik_static.yaml
+++ b/traefik/traefik_static.yaml
@@ -43,4 +43,6 @@ certificatesResolvers:
       email: admin@m3w.ch # CHANGE_ME
       storage: /etc/letsencrypt/acme.json
       dnsChallenge:
+        # Use the DNS provider of your choice
+        # See https://doc.traefik.io/traefik/https/acme/#providers
         provider: infomaniak # CHANGE_ME
