--- a/adguard-home/compose.yaml
+++ b/adguard-home/compose.yaml
@@ -32,13 +32,14 @@ services:
       - 67:67/udp
       - 68:68/tcp
       - 68:68/udp
-      # DNS-over-TLS
-      - 853:853/tcp
-      # DNS-over-QUIC
-      - 853:853/udp
+      ## Enable these if hosted on a VPS
+      # # DNS-over-TLS
+      # - 853:853/tcp
+      # # DNS-over-QUIC
+      # - 853:853/udp
     volumes:
       - ./config:/opt/adguardhome/conf
-      - ./data:/opt/adguardhome/work
+      - ./data:/opt/adguardhome/work/data
     labels:
       ## Traefik
       - traefik.enable=true
