--- a/homepage/compose.yaml
+++ b/homepage/compose.yaml
@@ -7,6 +7,8 @@ services:
     container_name: homepage
     image: ghcr.io/gethomepage/homepage:${HOMEPAGE_IMAGE_VERSION:-latest}
     restart: unless-stopped
+    environment:
+      - HOMEPAGE_ALLOWED_HOSTS=${HOMEPAGE_FQDN}
     networks:
       - traefik_network
     expose:
