--- a/adguard-home/compose.yaml
+++ b/adguard-home/compose.yaml
@@ -48,3 +48,9 @@ services:
       - traefik.http.routers.adguard-home.rule=Host(`${ADGUARD_HOME_FQDN}`)
       # Service
       - traefik.http.services.adguard-home.loadbalancer.server.port=80
+      ## Homepage
+      - homepage.group=Infrastructure
+      - homepage.name=AdGuard Home
+      - homepage.icon=adguard-home.svg
+      - homepage.href=https://${ADGUARD_HOME_FQDN}
+      - homepage.description=A DHCP and DNS server.
