--- a/homepage/config/settings.yaml
+++ b/homepage/config/settings.yaml
@@ -23,3 +23,9 @@ target: _blank
 
 # https://gethomepage.dev/configs/settings/#homepage-version-update-checking
 hideVersion: true
+
+# https://gethomepage.dev/configs/settings/#show-docker-stats
+showStats: true
+
+# https://gethomepage.dev/configs/settings/#status-style
+statusStyle: "dot"
