--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -4,6 +4,10 @@ networks:
   traefik_network:
     name: traefik_network
 
+volumes:
+  traefik_data:
+    name: "traefik_data"
+
 secrets:
   infomaniak_access_token:
     file: ./infomaniak_access_token.txt
@@ -25,8 +29,8 @@ services:
     secrets:
       - infomaniak_access_token
     volumes:
+      - traefik_data:/etc/letsencrypt
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./letsencrypt:/etc/letsencrypt
       - ./traefik_static.yaml:/etc/traefik/traefik_static.yaml:ro
       - ./traefik_dynamic.yaml:/etc/traefik/traefik_dynamic.yaml:ro
     labels:
