--- a/adguard-home/.env
+++ b/adguard-home/.env
@@ -2,6 +2,19 @@
 # The FQDN to access AdGuard Home
 ADGUARD_HOME_FQDN=adguard.m3w.ch
 
+## Network configuration
+# The network interface to use for the MACVLAN network
+MACVLAN_NETWORK_INTERFACE=eth0
+
+# The IP address range for the MACVLAN network
+MACVLAN_NETWORK_SUBNET=192.168.1.0/24
+
+# The gateway for the MACVLAN network
+MACVLAN_NETWORK_GATEWAY=192.168.1.1
+
+# The IP address for the container
+MACVLAN_NETWORK_IP=192.168.1.253
+
 ## Versions to use
 # The version to use for AdGuard Home
 ADGUARD_HOME_VERSION=v0.107.63
