Set Traefik network to container

--- a/adguard-home/compose.override.prod.yaml
+++ b/adguard-home/compose.override.prod.yaml
@@ -11,6 +11,7 @@ services:
     labels:
       ## Traefik
       - traefik.enable=true
+      - traefik.docker.network=traefik_network
       # Router
       - traefik.http.routers.adguard-home.entrypoints=websecure
       - traefik.http.routers.adguard-home.rule=Host(`${ADGUARD_HOME_FQDN}`)
