--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -6,7 +6,7 @@ networks:
 
 volumes:
   traefik_data:
-    name: "traefik_data"
+    name: traefik_data
 
 secrets:
   infomaniak_access_token:
@@ -34,9 +34,10 @@ services:
       - ./traefik_static.yaml:/etc/traefik/traefik_static.yaml:ro
       - ./traefik_dynamic.yaml:/etc/traefik/traefik_dynamic.yaml:ro
     labels:
-      # Traefik
+      ## Traefik
       - traefik.enable=true
-      ## HTTPS
+      # Router
       - traefik.http.routers.traefik.entryPoints=websecure
       - traefik.http.routers.traefik.rule=Host(`${TRAEFIK_FQDN}`)
+      # Service
       - traefik.http.routers.traefik.service=api@internal
