--- a/adguard-home/.env
+++ b/adguard-home/.env
@@ -4,4 +4,17 @@ ADGUARD_HOME_FQDN=adguard.m3w.ch
 
 ## Versions to use
 # The version to use for AdGuard Home
-ADGUARD_HOME_VERSION=v0.107.61
+ADGUARD_HOME_VERSION=v0.107.63
+
+## Network configuration
+# The network interface to use for the MACVLAN network
+MACVLAN_NETWORK_INTERFACE=eth0
+
+# The IP address range for the MACVLAN network
+MACVLAN_NETWORK_SUBNET=192.168.1.0/24
+
+# The gateway for the MACVLAN network
+MACVLAN_NETWORK_GATEWAY=192.168.1.1
+
+# The IP address for the container
+MACVLAN_NETWORK_IP=192.168.1.254
