Make usage of environment variables

--- a/wg-easy/compose.override.prod.yaml
+++ b/wg-easy/compose.override.prod.yaml
@@ -4,6 +4,8 @@ networks:
 
 services:
   wg-easy:
+    environment:
+      - INSECURE=false
     networks:
       - traefik_network
     ports: !override
