--- a/wg-easy/compose.yaml
+++ b/wg-easy/compose.yaml
@@ -3,6 +3,13 @@ name: WireGuard Easy
 networks:
   wg_easy_network:
     name: wg_easy_network
+    driver: bridge
+    enable_ipv6: true
+    ipam:
+      driver: default
+      config:
+        - subnet: 10.0.0.0/24
+        - subnet: fe80::a00:0::/120
 
 volumes:
   wg_easy_config:
@@ -13,12 +20,15 @@ services:
     container_name: wg-easy
     image: ghcr.io/wg-easy/wg-easy:${WG_EASY_VERSION}
     restart: unless-stopped
-    # env_file:
-    #   - wg-easy.env
-    # environment:
-    #   - INIT_ENABLED=true
+    env_file:
+      - wg-easy.env
+    environment:
+      - INSECURE=true
+      - INIT_ENABLED=true
     networks:
-      - wg_easy_network
+      wg_easy_network:
+        ipv4_address: 10.0.0.1
+        ipv6_address: fe80::a00:1
     ports:
       - 51820:51820/udp
       - 51821:51821/tcp
