--- a/wg-easy/wg-easy.env
+++ b/wg-easy/wg-easy.env
@@ -12,3 +12,9 @@ INIT_PORT=51820
 
 # Sets global DNS setting
 INIT_DNS=192.168.1.254
+
+# Sets IPv4 CIDR
+INIT_IPV4_CIDR=10.0.0.0/24
+
+# Sets IPv6 CIDR
+INIT_IPV6_CIDR=fe80::a00:0::/120
