--- a/wg-easy/wg-easy.env
+++ b/wg-easy/wg-easy.env
@@ -17,4 +17,4 @@ INIT_DNS=192.168.1.254
 INIT_IPV4_CIDR=10.0.0.0/24
 
 # Sets IPv6 CIDR
-INIT_IPV6_CIDR=fe80::a00:0::/120
+INIT_IPV6_CIDR=2001:db8::/120
