Fix template path

--- a/ansible/playbooks/proxmox/playbook.yaml
+++ b/ansible/playbooks/proxmox/playbook.yaml
@@ -62,7 +62,7 @@
     ## Network configuration
     - name: Configure /etc/hosts
       ansible.builtin.template:
-        src: hosts.j2
+        src: etc-hosts.j2
         dest: /etc/hosts
         mode: "0644"
 
