--- a/ansible/playbooks/proxmox/playbook.yaml
+++ b/ansible/playbooks/proxmox/playbook.yaml
@@ -66,6 +66,18 @@
         dest: /etc/hosts
         mode: "0644"
 
+    - name: Configure /etc/hostname
+      ansible.builtin.template:
+        src: etc-hostname.j2
+        dest: /etc/hostname
+        mode: "0644"
+
+    - name: Configure /etc/network/interfaces
+      ansible.builtin.template:
+        src: etc-network-interfaces.j2
+        dest: /etc/network/interfaces
+        mode: "0644"
+
     - name: Configure interface name for lan0 network
       ansible.builtin.template:
         src: etc-systemd-network-persistent-link.link.j2
