--- a/ansible/playbooks/host/playbook.yaml
+++ b/ansible/playbooks/host/playbook.yaml
@@ -98,40 +98,42 @@
         interface_name: "{{ lan1_interface_name }}"
         mac_address: "{{ lan1_mac_address }}"
 
-    # ## Disks
-    # - name: Create the systemd mount unit file
-    #   when: disk_label != None
-    #   ansible.builtin.template:
-    #     src: mnt-pve-disk.mount.j2
-    #     dest: /etc/systemd/system/mnt-pve-{{ disk_label }}.mount
-    #     mode: "0644"
+    ## Disks
+    - name: Create the systemd mount unit file
+      when: disk_label != None
+      ansible.builtin.template:
+        src: etc-systemd-system-mnt-pve-disk.mount.j2
+        dest: /etc/systemd/system/mnt-pve-{{ disk_label }}.mount
+        mode: "0644"
 
-    # - name: Enable and start the systemd mount unit
-    #   when: disk_label != None
-    #   ansible.builtin.systemd:
-    #     name: mnt-pve-{{ disk_label }}.mount
-    #     state: started
-    #     daemon_reload: true
-    #     enabled: true
+    - name: Enable and start the systemd mount unit
+      when: disk_label != None
+      ansible.builtin.systemd:
+        name: mnt-pve-{{ disk_label }}.mount
+        state: started
+        daemon_reload: true
+        enabled: true
 
-    # ## Container configuration
-    # - name: Mount the disk to the container
-    #   when: disk_label != None
-    #   ansible.builtin.lineinfile:
-    #     path: /etc/pve/lxc/{{ lxc_id }}.conf
-    #     line:
-    #       "mp0: /mnt/pve/{{ disk_label }},mp=/home/{{ user
-    #       }},mountoptions=noatime,backup=0"
+    ## Container configuration
+    - name: Mount the disk to the container
+      when: disk_label != None
+      ansible.builtin.lineinfile:
+        path: /etc/pve/lxc/{{ lxc_id }}.conf
+        line:
+          "mp0: /mnt/pve/{{ disk_label }},mp=/home/{{ user
+          }},mountoptions=noatime,backup=0"
 
-    # - name: Enable nesting feature for using Docker in the container
-    #   ansible.builtin.lineinfile:
-    #     path: /etc/pve/lxc/{{ lxc_id }}.conf
-    #     line: "features: nesting=1"
+    - name: Enable nesting feature for using Docker in the container
+      when: lxc_id != None
+      ansible.builtin.lineinfile:
+        path: /etc/pve/lxc/{{ lxc_id }}.conf
+        line: "features: nesting=1"
 
-    # - name: Enable start on boot
-    #   ansible.builtin.lineinfile:
-    #     path: /etc/pve/lxc/{{ lxc_id }}.conf
-    #     line: "onboot: 1"
+    - name: Enable start on boot
+      when: lxc_id != None
+      ansible.builtin.lineinfile:
+        path: /etc/pve/lxc/{{ lxc_id }}.conf
+        line: "onboot: 1"
 
     # # Source: https://github.com/portainer/portainer/issues/8478#issuecomment-1426866713
     # - name: Clear the cap drops
