--- a/ansible/variables/common-lxc.yaml
+++ b/ansible/variables/common-lxc.yaml
@@ -2,6 +2,6 @@ user: debian
 user_id: 1000
 group: debian
 group_id: 1000
-disk_label: home
-disk_uuid: 388aff77-76d8-4cd3-8026-8bf9ed58f8fb
+disk_label: common
+disk_uuid: de462c3d-f531-46d6-8204-b4d69df36de1
 lxc_id: 100
